Closed Bug 124103 Opened 23 years ago Closed 23 years ago

[FIX]infinite loop during page load

Categories

(Core :: XPCOM, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla0.9.9

People

(Reporter: mzeibig, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:0.9.8) Gecko/20020204
BuildID:    2002020406

If I try to load the page on URL http://support.bea.com/ the Browser trys to
load the page again and again with different parameters for the JSP behind the
URL. It works correct with Netscape 4.5 and older Mozillas

Reproducible: Always
Steps to Reproduce:
Go to http://support.bea.com/



Actual Results:  Mozilla trys to load the page again and again until You stop it.

Expected Results:  Display the page
WFM. Build ID: 2002 02 04 09. Windows 2000.

Reporter: Please set severity level to "critical", and add the keyword "hang".
Severity: major → critical
Keywords: hang
Confirming on Linux 2002020611. Page has a refresh tag:
<meta HTTP-EQUIV=Refresh CONTENT="5999940; URL=/ ....

Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows NT → All
Hardware: PC → All
Removing hang keyword as mozilla stays responsive and the stop button works.
Keywords: hang
This would be because timers overflow.

Running this we take 5999940, convert it to ms, the convert to a PRIntervalTime
and add to now.  The result overflows PRUint32 and makes the timer fire
immediately.  Putting some printfs in nsTimerImpl::SetDelayInternal, I get:

  fprintf(stderr, "The delay: %u\n", PR_MillisecondsToInterval(mDelay));
  fprintf(stderr, "Now: %u\n", now);
  fprintf(stderr, "Time to fire: %u\n", mTimeout);

  The delay: 1704972704
  Now: 3813825852
  Time to fire: 1223831260

Note that "Time to fire" is before "Now".  We should guard against this...
Assignee: asa → pavlov
Attached patch Proposed patchSplinter Review
Keywords: mozilla1.0, patch, review
Comment on attachment 68484 [details] [diff] [review]
Proposed patch

r=pavlov
Attachment #68484 - Flags: review+
taking bug
Assignee: pavlov → bzbarsky
Priority: -- → P1
Summary: infinite loop during page load → [FIX]infinite loop during page load
Target Milestone: --- → mozilla0.9.9
I am able to load that URL successfully with 2002020406... not sure what could 
be different here as opposed to the author's configuration...
Did they change the page? It is now working for me too.
Comment on attachment 68484 [details] [diff] [review]
Proposed patch

Looks good.

Is there an evangelism issue here?  Does the site need to be advised not to set
so uselessly large a timeout?

/be
Attachment #68484 - Flags: superreview+
*** Bug 120012 has been marked as a duplicate of this bug. ***
I don't think this is worth evangelising -- we no longer fail on this site and
the evangelists' energy is better spent elsewhere...
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 116361 has been marked as a duplicate of this bug. ***
*** Bug 123573 has been marked as a duplicate of this bug. ***
> we no longer fail on this site

Re: comments in the duplicate 116361, this bug is tricky to pin down and
reproduce.  Sometimes it happens, sometimes it doesn't.  It's not even always
reproducible on the same page on the same instance of the browser.  So if the
problem just "went away", it doesn't mean it's not still lurking.

After all that, did the patch go in?  There's no indication one way or the other
above.  If so, has anyone tried testing before and after it went in?
To partly answer my own question, Asa lists
(http://www.mozillazine.org/build_comments/) this bug as one of the checkins
made between 20020208 and 20020212.  I've tested builds from both dates with the
testcases on bug 116361: 0208=constant reloads  0212=no constant reloads.  So,
from here, it looks like Boris fixed it.  Yay Boris!
*** Bug 116415 has been marked as a duplicate of this bug. ***
*** Bug 129500 has been marked as a duplicate of this bug. ***
hey, bz, I know you can fixed bugs anywhere in the codebase, but we have this
thing called "component."  :)

Is this a networking bug (dunno where timers goes...)
Component: Browser-General → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: