Make sure we never set a timer for before "now" when given a positive delay.  Bug 124103, r=pavlov, sr=brendan